--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" backgroundImage="image_button_blue.png"/>
                                 <connections>
-                                    <segue destination="x25-BR-Sot" kind="push" id="mIY-9v-9Q7"/>
+                                    <segue destination="hrK-dS-v8S" kind="push" id="hzb-R3-2Ot"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -111,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIk-ho-RR4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="387" y="-8"/>
+            <point key="canvasLocation" x="505" y="-40"/>
         </scene>
         <!--Code Scan View Controller-->
         <scene sceneID="FUl-XS-t2A">
@@ -131,9 +131,6 @@
                                     <constraint firstAttribute="width" constant="50" id="Nh6-Dg-m2U"/>
                                 </constraints>
                                 <state key="normal" title="Log in"/>
-                                <connections>
-                                    <segue destination="Vd9-gv-BAI" kind="push" id="bZH-wz-D0m"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eAi-ec-tAD">
                                 <rect key="frame" x="189" y="656" width="37" height="30"/>
@@ -217,7 +214,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="51G-Rh-ipE" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="958" y="-8"/>
+            <point key="canvasLocation" x="906" y="856"/>
         </scene>
         <!--Users Creation View Controller-->
         <scene sceneID="BdO-DK-Qin">
@@ -228,11 +225,11 @@
                         <viewControllerLayoutGuide type="bottom" id="5j7-qC-qmc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dSM-Gv-kVT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击中间“＋”增加用户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-dj-iDq">
-                                <rect key="frame" x="117" y="86" width="180" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="点击中间“＋”增加用户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-dj-iDq">
+                                <rect key="frame" x="210" y="86" width="180" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="KCL-1j-1rB"/>
                                     <constraint firstAttribute="width" constant="180" id="sVC-gM-Vjr"/>
@@ -242,10 +239,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
-                                <rect key="frame" x="0.0" y="88" width="414" height="600"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="600"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukf-S2-h2b">
-                                <rect key="frame" x="172" y="353" width="70" height="70"/>
+                                <rect key="frame" x="265" y="285" width="70" height="70"/>
                                 <color key="backgroundColor" red="0.5525138650804724" green="0.77478983736028884" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="70" id="9bb-sg-rX4"/>
@@ -287,7 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mOH-2d-86E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1450" y="19"/>
+            <point key="canvasLocation" x="2744" y="-84"/>
         </scene>
         <!--User Info Register View Controller-->
         <scene sceneID="VJA-oy-jj7">
@@ -322,8 +319,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="addItem:" destination="0y1-DJ-0hx" eventType="touchUpInside" id="pNN-vE-mJ2"/>
-                                    <segue destination="hrK-dS-v8S" kind="push" identifier="toWifiConfigNoteViewController" id="eaE-69-ynU"/>
+                                    <action selector="addItem:" destination="0y1-DJ-0hx" eventType="touchUpInside" id="NZb-nD-a8b"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -363,7 +359,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WdJ-JF-0dJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1985" y="19"/>
+            <point key="canvasLocation" x="2699" y="799"/>
         </scene>
         <!--Wifi Config Note View Controller-->
         <scene sceneID="QQf-yB-jGM">
@@ -445,7 +441,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bZV-B4-N9t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2429" y="19"/>
+            <point key="canvasLocation" x="1057" y="-10"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="NXU-nu-oA6">
@@ -612,7 +608,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pYd-Az-MFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2890" y="19"/>
+            <point key="canvasLocation" x="1660" y="-10"/>
         </scene>
         <!--Configurating View Controller-->
         <scene sceneID="w60-1r-QdG">
@@ -695,7 +691,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2q0-Pz-esB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3334" y="19"/>
+            <point key="canvasLocation" x="2168" y="-10"/>
         </scene>
         <!--Nav1 View Controller-->
         <scene sceneID="R0t-xt-np7">
@@ -735,7 +731,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AAa-HV-zrH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3334" y="880"/>
+            <point key="canvasLocation" x="3966" y="58"/>
         </scene>
     </scenes>
     <resources>
