--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -238,49 +238,21 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="background_circles-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
                                 <rect key="frame" x="0.0" y="20" width="600" height="600"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukf-S2-h2b">
-                                <rect key="frame" x="265" y="285" width="70" height="70"/>
-                                <color key="backgroundColor" red="0.5525138650804724" green="0.77478983736028884" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="70" id="9bb-sg-rX4"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="70" id="Zzp-Hk-OpO"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="e1A-t5-6ar"/>
-                                    <constraint firstAttribute="width" constant="80" id="vzb-t7-wSD"/>
-                                </constraints>
-                                <color key="tintColor" red="0.074509803920000006" green="0.73333333329999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="button_plus.png">
-                                    <color key="titleColor" red="0.074509803920000006" green="0.73333333329999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="vzb-t7-wSD"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <segue destination="0y1-DJ-0hx" kind="push" id="S0k-Sq-JVi"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="esm-Dx-m9h" secondAttribute="trailing" id="8V7-BX-ukv"/>
                             <constraint firstItem="hM0-dj-iDq" firstAttribute="centerX" secondItem="dSM-Gv-kVT" secondAttribute="centerX" id="CYm-rh-ZR6"/>
                             <constraint firstItem="esm-Dx-m9h" firstAttribute="leading" secondItem="dSM-Gv-kVT" secondAttribute="leading" id="DUw-ZC-brx"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" constant="20" id="Hib-1j-XqY"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="esm-Dx-m9h" secondAttribute="centerY" id="QWG-fH-gcO"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="ukf-S2-h2b" secondAttribute="centerX" id="Vkd-WF-A0B"/>
                             <constraint firstItem="hM0-dj-iDq" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" constant="22" id="kqU-OE-qnM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8FH-CP-Ccc">
                         <nil key="title"/>
                     </navigationItem>
-                    <connections>
-                        <outlet property="plusUser" destination="ukf-S2-h2b" id="pwX-8r-HpQ"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mOH-2d-86E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -732,9 +704,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background_circles.png" width="414" height="600"/>
+        <image name="background_circles-2.png" width="414" height="650"/>
         <image name="background_small_white_circle.png" width="100" height="100"/>
-        <image name="button_plus.png" width="100" height="100"/>
         <image name="icon_back.png" width="100" height="100"/>
         <image name="icon_code.png" width="100" height="100"/>
         <image name="icon_wifi.png" width="100" height="100"/>
