--- a/iSmartHome/ViewControllers/WeightResultViewController.xib
+++ b/iSmartHome/ViewControllers/WeightResultViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -11,6 +11,7 @@
                 <outlet property="bigBlueCircleImg" destination="fqh-Nv-qhM" id="HE3-U0-DzE"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="weightLbl" destination="ngV-eC-wHD" id="Rkf-Kw-gWr"/>
+                <outlet property="weightResetBtn" destination="aie-zZ-PFs" id="sLF-C1-Q82"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -44,6 +45,23 @@
                     <color key="textColor" red="0.0" green="0.73667895442359255" blue="0.097404554294690263" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aie-zZ-PFs">
+                    <rect key="frame" x="192" y="683" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="AYy-0b-UvC"/>
+                    </constraints>
+                    <state key="normal" title="清零" backgroundImage="image_button_blue.png">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="AYy-0b-UvC"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="resetWeightDown:" destination="-1" eventType="touchUpInside" id="48s-is-Z1d"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -64,5 +82,6 @@
     <resources>
         <image name="background_big_circle.png" width="300" height="300"/>
         <image name="background_circles-2.png" width="414" height="650"/>
+        <image name="image_button_blue.png" width="330" height="50"/>
     </resources>
 </document>
