--- a/iSmartHome/ViewControllers/WeightResultViewController.xib
+++ b/iSmartHome/ViewControllers/WeightResultViewController.xib
@@ -35,11 +35,11 @@
                     <color key="textColor" red="0.0" green="0.73667895439999997" blue="0.097404554290000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ngV-eC-wHD">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ngV-eC-wHD">
                     <rect key="frame" x="122" y="362" width="149.5" height="51"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="3Co-ry-Hnq"/>
-                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="51" id="8NI-gp-xPa"/>
+                        <constraint firstAttribute="width" constant="150" id="3Co-ry-Hnq"/>
+                        <constraint firstAttribute="height" constant="51" id="8NI-gp-xPa"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="63"/>
                     <color key="textColor" red="0.0" green="0.73667895442359255" blue="0.097404554294690263" alpha="1" colorSpace="calibratedRGB"/>
